# Hifx

./: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/libs/: README.md
app/libs/xiaomi/: README.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_convolution.cpp  native_resampler.cpp  native_surround.cpp  native_top_bar_visualizer.cpp  native_usb_backend.cpp  native_vocal_isolation.cpp
app/src/main/java/com/alky/hifx/: Dialog.kt  (+13 more)
app/src/main/res/drawable/: bg_eq_curve_panel.xml  bg_index_hint_bubble.xml  bg_lyrics_fade_bottom.xml  bg_lyrics_fade_top.xml  bg_mini_handle.xml  ic_launcher_background.xml  ic_launcher_foreground_art.xml  ic_launcher_monochrome.xml  ic_launcher_monochrome_art.xml  ic_music_note.xml
app/src/main/res/layout/: activity_main.xml  activity_player.xml  fragment_album_detail.xml  fragment_artist_detail.xml  fragment_calendar.xml  fragment_effects.xml  fragment_home.xml  fragment_playback.xml  fragment_settings.xml  item_calendar_cell.xml  item_detail_track.xml  item_eq_band_vertical.xml  item_home.xml  item_library_entity.xml  item_library_header.xml  item_player_lyric_line.xml  item_simple.xml  item_track.xml  layout_mini_player.xml
app/src/main/res/menu/: bottom_nav_menu.xml  drawer_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: attrs.xml  colors.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v31/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
(+79 files in other folders)
